# napi-uniffi-macro

./: Cargo.toml  Makefile.toml  package-lock.json  package.json  test.mjs  test.py  test_uniffi.sh  uniffi-bindgen.rs
.github/workflows/: CI.yml
macros/: Cargo.toml
macros/src/: attr.rs  item_impl.rs  item_trait.rs  lib.rs  util.rs
src/: lib.rs
