[package]
edition = "2021"
name = "hello"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
bridge = { path = "macros"}
reqwest = "0.11.5"
serde_json = "1.0.68"
thiserror = "1.0.38"
tokio = { version = "1", features = ["rt", "time", "macros",] }

napi = { version = "2.12.2", default-features = false, features = ["napi4", "async"], optional = true}
napi-derive = { version = "2.12.2", optional = true}
uniffi = { version = "0.27", features = ["cli"], optional = true}
# uniffi = { version = "0.27", features = ["cli"], optional = false}

[build-dependencies]
napi-build = { version = "2.0.1", optional = true }
uniffi = { version = "0.27", features = ["build"], optional = true}
# uniffi = { version = "0.27", features = ["build"], optional = false}

[profile.release]
lto = true
strip = "symbols"

[features]
node = ["napi", "napi-derive", "napi-build"]
ffi = ["uniffi"]
# ffi = []