[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.3.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { verson = "2.0", features = ["full"] }
syn-mid = "0.6"

[dev-dependencies]
syn = { version = "2.0", features = ["extra-traits"] }